<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/side_padding"
    android:paddingRight="@dimen/side_padding"
    android:paddingTop="@dimen/side_padding">

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_content"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/side_padding"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/interline">

        <TextView
            android:id="@+id/start_date"
            style="@style/Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/half_interline"
            android:layout_weight="1"
            android:text="@string/label_start_date" />

        <TextView
            android:id="@+id/due_date"
            style="@style/Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_interline"
            android:layout_weight="1"
            android:text="@string/label_due_date" />

    </LinearLayout>

    <TextView
        android:id="@+id/responsible_party"
        style="@style/Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interline"
        android:text="@string/label_responsible" />

    <TextView
        android:id="@+id/task_list"
        style="@style/Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interline"
        android:layout_weight="1"
        android:text="@string/label_task_list" />

    <TextView
        android:id="@+id/priority"
        style="@style/Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_priority" />

    <Button
        android:id="@+id/delete_task"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/side_padding"
        android:text="@string/delete_task" />

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey">

    </FrameLayout>

</LinearLayout>